[workspace]
resolver = "2"
members = [
    "programs/associated-token-account",
    "programs/memo",
    "programs/system",
    "programs/token",
    "sdk/log/crate",
    "sdk/log/macro",
    "sdk/pinocchio",
    "sdk/pubkey",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anza-xyz/pinocchio"
rust-version = "1.79"

[workspace.dependencies]
five8_const = "0.1.4"
pinocchio = { version = "0.8", path = "sdk/pinocchio" }
pinocchio-log-macro = { version = "0.4", path = "sdk/log/macro" }
pinocchio-pubkey = { version = "0.2", path = "sdk/pubkey" }
quote = "1.0"
regex = "1"
syn = "1.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(target_feature, values("static-syscalls"))',
] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
inline_always = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
redundant_else = "allow"
into_iter_without_iter = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

[workspace.metadata.cli]
solana = "2.2.0"

[workspace.metadata.toolchains]
build = "1.84.1"
format = "nightly-2024-11-22"
lint = "nightly-2024-11-22"
test = "1.84.1"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false
