[package]
name = "pinocchio"
description = "Create Solana programs with no dependencies attached"
version = "0.8.4"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(target_feature, values("static-syscalls"))',
] }

[features]
std = []

[dev-dependencies]
# std = "1.0.0" # Cannot add std as a crate dependency
solana-sdk = "1.18"
# Add deps for integration-style test
solana-program-test = "1.18"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
