[package]
name = "pinocchio"
description = "Create Solana programs with no dependencies attached"
version = "0.8.4"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }
rust-version = { workspace = true }
build = "build.rs" # keep 1.82.0 features out until program-tools allows us to move up from 1.79.0

[lib]
crate-type = ["rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(target_feature, values("static-syscalls"))',
] }

[features]
std = []

[build-dependencies]
rustc_version = "0.4"
