[package]
name = "pinocchio-log"
description = "Lightweight log utility for Solana programs"
version = "0.4.0"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio-log-macro = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = ["macro"]
macro = ["dep:pinocchio-log-macro"]
